# DEFG

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD-GUIDE.md  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  launch.vs.json  vcpkg.json
cmake/: DEFGConfig.cmake.in
data/: Green.xyz  Greentri.dxf  RMNPtri.dxf  etopo511B-GDE4_10.elev  etopo511B.xyz  rmnp2.xyz  rmnp3.xyz  rmnp42.xyz
src/DEFG/: DEFG.cpp  DEFG.h  DEFGDiag.cpp  DEFGSpline.cpp  DEFGSpline.h  DEFGSupport.cpp  DEFGSupport.h
tests/: defg-util.cpp
